--- a/src/app/components/file-uploader/file-uploader.component.html
+++ b/src/app/components/file-uploader/file-uploader.component.html
@@ -1,8 +1,10 @@
 <p-confirmDialog header="Confirmation" icon="pi pi-exclamation-triangle"></p-confirmDialog>
 
 <p-fileUpload name="file" url="{{prod}}/api/secured/Document/Upload" (onUpload)="onUpload($event)"
-
-              multiple="multiple" accept="image/*" maxFileSize="1000000">
+        cancelLabel="გაუქმება"
+        chooseLabel="დოკუმენტის მიმაგრება"
+              uploadLabel="დოკუმენტის ატვირთვა"
+              multiple="multiple"  maxFileSize="1000000">
   <ng-template pTemplate="content">
     <table *ngIf="uploadedFiles.length" style="width: 100%; border-top: 1px solid #5d5d5d">
         <tr *ngFor="let file of uploadedFiles">
