--- a/src/app/views/directory/directory.component.html
+++ b/src/app/views/directory/directory.component.html
@@ -56,7 +56,7 @@
       </div>
     </div>
     <div class="p-grid" *ngIf="item.id === 'employees'">
-      < <div class="p-col-4">
+      <div class="p-col-4">
       <app-table-tree
         (selected)="onStructuralTreeTableSelect($event)"
         [actions]="{
