--- a/src/app/components/file-uploader/file-uploader.component.css
+++ b/src/app/components/file-uploader/file-uploader.component.css
@@ -1,6 +1,6 @@
 /* Error: expected selector.
  *   ,
- * 1 | /deep/ .ui-fileupload-content{
+ * 1 | /deep/{
  *   | ^
  *   '
  *   file-uploader.component.scss 1:1  root stylesheet */
@@ -13,5 +13,5 @@ body::before {
   padding: 1em;
   margin-bottom: 1em;
   border-bottom: 2px solid black;
-  content: "Error: expected selector.\a   \2577 \a 1 \2502  /deep/ .ui-fileupload-content{\d\a   \2502  ^\a   \2575 \a   file-uploader.component.scss 1:1  root stylesheet";
+  content: "Error: expected selector.\a   \2577 \a 1 \2502  /deep/{\d\a   \2502  ^\a   \2575 \a   file-uploader.component.scss 1:1  root stylesheet";
 }
