--- a/src/app/components/multiple-table/multiple-table.component.html
+++ b/src/app/components/multiple-table/multiple-table.component.html
@@ -1,7 +1,6 @@
 <p-confirmDialog [style]="{width: '500px'}"></p-confirmDialog>
 <div  [ngClass]="{'pTable':!disableClass, 'dialog':disableClass }">
   <p-table
-
     [columns]="cols"
     [value]="data"
     [lazy]="true"
@@ -27,7 +26,7 @@
           <span [innerHTML]="header"></span>
           <div  *ngIf="enableActions" style="text-align: right; border-left: 0px; float: right">
             <i class="pi pi-users" *ngIf="this.additionButton" style="font-size: 20px;margin-left:  10px; cursor: pointer" (click)="additionEmployee()"  pTooltip="თანამშრომლის დამატება" tooltipPosition="top" ></i>
-            <i class="pi pi-table" *ngIf="this.additionButton" style="font-size: 20px;margin-left:  10px; cursor: pointer" (click)="addition()"  pTooltip="{{header}}ს დამატება" tooltipPosition="top" ></i>
+            <i class="pi pi-table" *ngIf="this.additionButton" style="font-size: 20px;margin-left:  10px; cursor: pointer" (click)="addition()"  pTooltip="თანამდებობის დამატება" tooltipPosition="top" ></i>
             <i class="pi pi-plus" style="font-size: 20px;margin-left:  10px; cursor: pointer" (click)="newItem()"  pTooltip="{{header}}ს დამატება" tooltipPosition="top" ></i>
             <i class="pi pi-pencil" style="font-size: 20px;margin-left: 10px; cursor: pointer" (click)="edit()" pTooltip="{{header}}ს რედაქტირება" tooltipPosition="top" ></i>
             <i class="pi pi-times" style="font-size: 20px; color:red;margin-left: 10px; cursor: pointer" (click)="onDelete()" pTooltip="{{header}}ს წაშლა" tooltipPosition="top" ></i>
