--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -18,10 +18,7 @@
       <a class="nav-link" href="#">Settings</a>
     </li>
   </ul-->
-  <span class="inv_lang" style="position: absolute; right: 10px;">
-    <button type="button" [ngClass]="(lang === 'ge')? 'active':''" style="position: relative; top:-2px;" (click)="changeLang('ge')"><img src="./assets/img/icons/ge.png" width="25" alt=""></button>
-    <button type="button" [ngClass]="(lang === 'uk')? 'active':''" style="position: relative; top:-2px;" (click)="changeLang('uk')"><img src="./assets/img/icons/uk.png" width="25" alt=""></button>
-  </span>
+  <app-language (onChange)="onChange($event)" ></app-language>
   <ul class="nav navbar-nav ml-auto">
 
     <!--li class="nav-item dropdown" dropdown placement="bottom right">
