--- a/src/app/views/management/warehouse/warehouse.component.scss
+++ b/src/app/views/management/warehouse/warehouse.component.scss
@@ -65,7 +65,14 @@
       }
       &:nth-child(1){display: flex; justify-content: flex-start;}
       &:nth-child(2){display: flex; justify-content: center;}
-      &:nth-child(3){display: flex; justify-content: flex-end;}
+      &:nth-child(3){
+        app-language {
+          span{
+            position: relative !important;
+          }
+        }
+        display: flex; justify-content: flex-end;
+      }
       button {height: 28.28px}
       .cart {
         display: flex;
