--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -25,5 +25,7 @@ app-sidebar-nav-link a {
 .ui-fileupload  button {
   margin: 0 !important;
 }
-
+.flatpickr-calendar{
+  display: none;
+}
 // width: calc(100% - 10px);
