--- a/src/app/components/language/language.component.css
+++ b/src/app/components/language/language.component.css
@@ -1,9 +1,9 @@
 /* Error: expected selector.
  *   ,
- * 1 | /deep/ app-warehouse{
+ * 1 | /deep/ .inv_lang button{
  *   | ^
  *   '
- *   warehouse.component.scss 1:1  root stylesheet */
+ *   language.component.scss 1:1  root stylesheet */
 
 body::before {
   font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
@@ -13,5 +13,5 @@ body::before {
   padding: 1em;
   margin-bottom: 1em;
   border-bottom: 2px solid black;
-  content: "Error: expected selector.\a   \2577 \a 1 \2502  /deep/ app-warehouse{\a   \2502  ^\a   \2575 \a   warehouse.component.scss 1:1  root stylesheet";
+  content: "Error: expected selector.\a   \2577 \a 1 \2502  /deep/ .inv_lang button{\a   \2502  ^\a   \2575 \a   language.component.scss 1:1  root stylesheet";
 }
